--- a/style.css
+++ b/style.css
@@ -13,14 +13,6 @@ body{
     justify-content: space-around;
     height: 40vh;
 }
-/* input{
-    width: 300px;
-    height: 50px;
-    border: none;
-    border-radius: 5px;
-    padding: 10px;
-    outline: none;
-} */
 button{
     width: 150px;
     height: 40px;
@@ -31,6 +23,8 @@ button{
     cursor: pointer;
 }
 textarea{
+    width: 400px;
+    height: 100px;
     border: none;
     border-radius: 5px;
     padding: 10px;
@@ -51,5 +45,11 @@ textarea{
     }
     75%{
         color: black;
+    }
+}
+
+@media only screen and (max-width:450px){
+    textarea{
+        width: 200px;
     }
 }
